--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "[20 rows x 69 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "array([-1, -1, -1, ...,  5,  7,  5], dtype=int64)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
        "[36794 rows x 59 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
        "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3449,7 +3449,7 @@
        "[59 rows x 59 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3460,7 +3460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3481,7 +3481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3490,7 +3490,7 @@
        "(36794, 59)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3501,7 +3501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3511,7 +3511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3520,7 +3520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3531,28 +3531,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "fuel_economy_score\n",
-       "-1     24646\n",
-       " 5      1223\n",
-       " 4       918\n",
-       " 6       756\n",
-       " 7       648\n",
-       " 3       413\n",
-       " 8       353\n",
-       " 2       238\n",
-       " 1       101\n",
-       " 9        81\n",
-       " 10       58\n",
+       "-1     24574\n",
+       " 5      1260\n",
+       " 4       931\n",
+       " 6       773\n",
+       " 7       659\n",
+       " 3       400\n",
+       " 8       352\n",
+       " 2       247\n",
+       " 1       105\n",
+       " 9        79\n",
+       " 10       55\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3570,7 +3570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3969,7 +3969,7 @@
        "[36794 rows x 59 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3981,7 +3981,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['vehicle_id', 'year', 'engine_index', 'engine_cylinders',\n",
+       "       'engine_displacement', 'city_mpg_ft1', 'unrounded_city_mpg_ft1',\n",
+       "       'city_mpg_ft2', 'unrounded_city_mpg_ft2',\n",
+       "       'city_gasoline_consumption_cd', 'city_electricity_consumption',\n",
+       "       'city_utility_factor', 'highway_mpg_ft1', 'unrounded_highway_mpg_ft1',\n",
+       "       'highway_mpg_ft2', 'unrounded_highway_mpg_ft2',\n",
+       "       'highway_gasoline_consumption_cd', 'highway_electricity_consumption',\n",
+       "       'highway_utility_factor', 'unadjusted_city_mpg_ft1',\n",
+       "       'unadjusted_highway_mpg_ft1', 'unadjusted_city_mpg_ft2',\n",
+       "       'unadjusted_highway_mpg_ft2', 'combined_mpg_ft1',\n",
+       "       'unrounded_combined_mpg_ft1', 'combined_mpg_ft2',\n",
+       "       'unrounded_combined_mpg_ft2', 'combined_electricity_consumption',\n",
+       "       'combined_gasoline_consumption_cd', 'combined_utility_factor',\n",
+       "       'annual_fuel_cost_ft1', 'annual_fuel_cost_ft2', 'save_or_spend_5_year',\n",
+       "       'annual_consumption_in_barrels_ft1',\n",
+       "       'annual_consumption_in_barrels_ft2', 'tailpipe_co2_ft1',\n",
+       "       'tailpipe_co2_in_grams_mile_ft1', 'tailpipe_co2_ft2',\n",
+       "       'tailpipe_co2_in_grams_mile_ft2', 'fuel_economy_score', 'ghg_score',\n",
+       "       'ghg_score_alt_fuel', 'x2d_passenger_volume', 'x2d_luggage_volume',\n",
+       "       'x4d_passenger_volume', 'x4d_luggage_volume',\n",
+       "       'hatchback_passenger_volume', 'hatchback_luggage_volume',\n",
+       "       'hours_to_charge_120v', 'hours_to_charge_240v',\n",
+       "       'hours_to_charge_ac_240v', 'composite_city_mpg',\n",
+       "       'composite_highway_mpg', 'composite_combined_mpg', 'range_ft1',\n",
+       "       'city_range_ft1', 'highway_range_ft1', 'city_range_ft2',\n",
+       "       'highway_range_ft2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3994,7 +4040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4102,7 +4148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4111,7 +4157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4134,7 +4180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4154,7 +4200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4174,7 +4220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4183,7 +4229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4201,6 +4247,13 @@
     "joblib.dump(model,'feul_model.h5')\n",
     "joblib.dump(scaler,'feulscaler.h5')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
